--- a/forms.html
+++ b/forms.html
@@ -28,9 +28,30 @@
         Time:
         <input type="time" name="time" required><br>
     </label>
-  
-        Color:
-        <input type="color" name="color" required><br><label for"></label>
+    <label for="file upload">
+        File Upload:
+        <input type="file" name="file" required><br>
+    </label>
+        <label >gender:
+           Male - <input type="radio" name="male" id="male">
+           female - <input type="radio" name="male" id="male">
+        </label><br>
+        <label for="select">
+            Select CITY:
+            <select name="select" id="select">
+                <option value="option1">kadiri</option>
+                <option value="option2">HYD</option>
+                <option value="option3">bng</option>
+            </select><br>
+        </label>
+        <label for="check box">
+            SKILLS:<br>
+            java<input type="checkbox" name="check" id="check"><br>
+            python<input type="checkbox" name="check" id="check"><br>
+            c++<input type="checkbox" name="check" id="check"><br>
+            c#<input type="checkbox" name="check" id="check"><br>
+            javascript<input type="checkbox" name="check" id="check"><br>
+        </label>
   <button type="submit">submit</button>
  
 </form>
